50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: yatest
  name: sites
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "golangsite1204.crabdance.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: yagolangsite-service
                port:
                  number: 80
    - host: "stefanpython0113.ignorelist.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: stefan-service
                port:
                  number: 80
    - host: "stefanssuperdupersajt.chickenkiller.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: staticwebserver-service
                port:
                  number: 80
